Stops images from being stretched out of proportion and provides small changes that improve the look

--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -46,11 +46,7 @@ div#landingPageText {
 
 .directoryImage {
     padding: 0;
-    height: 64px;
-    width: 128px;
-
-    margin: 0;
-    margin-right: 25px;
+    margin: 0 25px 5px 0;
     float: left;
 }
 
