--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -1,13 +1,7 @@
 .directoryImage {
     padding: 0;
-    height: 64px;
-    width: 128px;
-
-    margin: 0;
-    margin-right: 25px;
-    margin-top: 20px;
+    margin: 20px 25px 0 0;
     float: left;
-
 }
 
 .directoryResult {
